# focusretro

./: .git-blame-ignore-revs  .gitignore  .prettierignore  README.md  eslint.config.js  lefthook.yml  package-lock.json  package.json  radial.css  radial.html  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: index.html  input.css  sitemap.xml  style.css
src/: App.tsx  main.tsx  radial.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  offline.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/src/: commands.rs  lib.rs  radial.rs  ready.rs  state.rs
src-tauri/src/core/: autoswitch.rs  parser.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/platform/macos/: hotkeys.rs  notifications.rs  window.rs
src-tauri/src/platform/windows/: hotkeys.rs  notifications.rs  taskbar.rs  window.rs
src/components/: AccountList.tsx  DebugPanel.tsx  ErrorBoundary.tsx  MessageList.tsx  PermissionsSetup.tsx  RadialSelector.tsx  Settings.tsx
src/lib/: commands.ts  taskbarIcon.ts
src/locales/: en.json  es.json  fr.json
