[package]
name = "focusretro"
version = "0.6.2"
description = "Auto-focus Dofus Retro game windows on turn start"
authors = ["FocusRetro Contributors"]
edition = "2021"
rust-version = "1.80.0"

[lib]
name = "focusretro_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["auto-update"]
auto-update = ["dep:tauri-plugin-updater"]

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.102"
parking_lot = "0.12.5"
regex = "1.12.3"
sys-locale = "0.3.2"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
  "NSRunLoop",
  "NSString",
  "NSArray",
  "NSObjCRuntime",
  "NSThread",
] }
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSRunningApplication",
  "NSWorkspace",
] }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "18ffb9a201fbf6fedfaa382fd4b92315ea30ab1a" } # v2

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Dwm",
  "Win32_System_Threading",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_Storage_EnhancedStorage",
  "Foundation",
  "UI_Notifications_Management",
  "UI_Notifications",
  "Foundation_Collections",
] }

[dev-dependencies]
tempfile = "3"

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
